# salamander-reloaded

./: .gitignore  README.md  build.zig  dicemath.zig  pyproject.toml  schema.sql
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml
object_generation/: base2048_resource.py  dec_table.py  enc_table.py
src/salamander/: __init__.py  __main__.py  _ac.py  _ev_policy.py  _type_stuff.py  b2048.zlib  base2048.py  bot.py  cli.py  db.py  dice.py  dicemath.py  infotools.py  logs.py  notes.py  reminders.py  runner.py  schema.sql  settings_commands.py  tags.py  utils.py
src/salamander/l10n/en-US/: salamander.ftl
